--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,47 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@headlessui/react": "^1.2.0",
+    "@heroicons/react": "^1.0.1",
+    "@solana/web3.js": "^1.36.0",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.2",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/humps": "^2.0.0",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3auth/base": "^1.0.0",
+    "@web3auth/openlogin-adapter": "^1.0.0",
+    "@web3auth/solana-provider": "^1.0.0",
+    "@web3auth/web3auth": "^1.0.0",
+    "antd": "^4.16.6",
+    "autoprefixer": "^10.4.2",
+    "axios": "^0.21.1",
+    "camelcase-keys": "^6.2.2",
+    "clsx": "^1.1.1",
+    "humps": "^2.0.1",
+    "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
+    "moralis": "^1.4.0",
+    "next-auth": "^3.23.1",
+    "next-pwa": "^5.2.21",
+    "opensea-js": "^3.0.4",
+    "postcss": "^8.4.6",
+    "prop-types": "^15.7.2",
+    "react-ga": "^3.3.0",
+    "react-hook-form": "^7.11.0",
+    "react-inlinesvg": "^2.2.2",
+    "react-moralis": "^1.4.0",
+    "react-multi-carousel": "^2.6.3",
+    "react-query": "^3.16.0",
+    "react-toast-notifications": "^2.4.4",
+    "snakecase-keys": "^4.0.2",
+    "swr": "^0.3.11",
+    "tailwindcss": "^3.0.23",
+    "web3": "^1.7.0",
     "@1hive/evmcrispr": "^0.4.0",
     "@ethersproject/abstract-provider": "^5.6.1",
     "@ethersproject/abstract-signer": "^5.6.2",
@@ -21,6 +62,23 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@types/js-cookie": "^2.2.6",
+    "@types/react-inlinesvg": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
+    "sass": "^1.32.5",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
