--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "@ethersproject/providers": "^5.6.8",
     "@gnosis.pm/safe-ethers-adapters": "0.1.0-alpha.9",
     "@metamask/detect-provider": "^1.2.0",
+    "clsx": "^1.2.1",
     "ethers": "^5.6.9",
     "next": "latest",
     "nft.storage": "^6.4.0",
