--- a/src/package.json
+++ b/src/package.json
@@ -6,9 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@1hive/evmcrispr": "^0.4.0",
     "@ant-design/icons": "^4.7.0",
+    "@ethersproject/abstract-provider": "^5.6.1",
+    "@ethersproject/abstract-signer": "^5.6.2",
+    "@ethersproject/bignumber": "^5.6.2",
+    "@ethersproject/properties": "^5.6.0",
+    "@ethersproject/providers": "^5.6.8",
+    "@gnosis.pm/safe-ethers-adapters": "0.1.0-alpha.9",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "@metamask/detect-provider": "^1.2.0",
     "@solana/web3.js": "^1.36.0",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
@@ -26,16 +34,21 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.21.1",
     "camelcase-keys": "^6.2.2",
-    "clsx": "^1.1.1",
+    "clsx": "^1.2.1",
+    "ethers": "^5.6.9",
     "humps": "^2.0.1",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "moralis": "^1.4.0",
+    "next": "latest",
     "next-auth": "^3.23.1",
     "next-pwa": "^5.2.21",
+    "nft.storage": "^6.4.0",
     "opensea-js": "^3.0.4",
     "postcss": "^8.4.6",
     "prop-types": "^15.7.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-ga": "^3.3.0",
     "react-hook-form": "^7.11.0",
     "react-inlinesvg": "^2.2.2",
@@ -43,31 +56,22 @@
     "react-multi-carousel": "^2.6.3",
     "react-query": "^3.16.0",
     "react-toast-notifications": "^2.4.4",
+    "recharts": "^2.1.12",
     "snakecase-keys": "^4.0.2",
     "swr": "^0.3.11",
     "tailwindcss": "^3.0.23",
-    "web3": "^1.7.0",
-    "@1hive/evmcrispr": "^0.4.0",
-    "@ethersproject/abstract-provider": "^5.6.1",
-    "@ethersproject/abstract-signer": "^5.6.2",
-    "@ethersproject/bignumber": "^5.6.2",
-    "@ethersproject/properties": "^5.6.0",
-    "@ethersproject/providers": "^5.6.8",
-    "@gnosis.pm/safe-ethers-adapters": "0.1.0-alpha.9",
-    "@metamask/detect-provider": "^1.2.0",
-    "clsx": "^1.2.1",
-    "ethers": "^5.6.9",
-    "next": "latest",
-    "nft.storage": "^6.4.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@types/js-cookie": "^2.2.6",
+    "@types/node": "17.0.35",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.5",
     "@types/react-inlinesvg": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -76,16 +80,12 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
+    "postcss": "^8.4.14",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "sass": "^1.32.5",
-    "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "4.7.2"
   }
 }
