linked workspace src with contracts

--- a/src/package.json
+++ b/src/package.json
@@ -73,6 +73,7 @@
     "@types/react-inlinesvg": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
+    "@factoring/contracts": "*",
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
