--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -26,6 +26,9 @@
       "@components/*": [
         "components/*"
       ],
+      "@factoring/*": [
+        "../packages/contracts/*"
+      ],
       "@helpers/*": [
         "helpers/*"
       ]
@@ -34,6 +37,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
+    "../packages/contracts/**/*.ts",
     "**/*.tsx"
   ],
   "exclude": [
