--- a/src/package.json
+++ b/src/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "@1hive/evmcrispr": "^0.4.0",
     "@ant-design/icons": "^4.7.0",
+    "@dropzone-ui/react": "^6.7.4",
+    "@ethersproject/abi": "^5.6.4",
     "@ethersproject/abstract-provider": "^5.6.1",
     "@ethersproject/abstract-signer": "^5.6.2",
     "@ethersproject/bignumber": "^5.6.2",
+    "@ethersproject/contracts": "^5.6.2",
     "@ethersproject/properties": "^5.6.0",
     "@ethersproject/providers": "^5.6.8",
     "@gnosis.pm/safe-ethers-adapters": "0.1.0-alpha.9",
@@ -34,7 +37,7 @@
     "antd": "^4.16.6",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.2",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "camelcase-keys": "^6.2.2",
     "clsx": "^1.2.1",
     "ethers": "^5.6.9",
@@ -62,10 +65,12 @@
     "snakecase-keys": "^4.0.2",
     "swr": "^0.3.11",
     "tailwindcss": "^3.0.23",
-    "web3": "^1.7.0"
+    "web3": "^1.7.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@factoring/contracts": "*",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
@@ -73,7 +78,6 @@
     "@types/react-inlinesvg": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
-    "@factoring/contracts": "*",
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
