--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@1hive/evmcrispr": "^0.4.0",
     "@ant-design/icons": "^4.7.0",
+    "@aragon/wrapper": "^5.5.2",
     "@dropzone-ui/react": "^6.7.4",
     "@ethersproject/abi": "^5.6.4",
     "@ethersproject/abstract-provider": "^5.6.1",
@@ -20,6 +21,7 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@metamask/detect-provider": "^1.2.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@solana/web3.js": "^1.36.0",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
@@ -29,6 +31,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/aos": "^3.0.4",
     "@types/humps": "^2.0.0",
+    "@types/react-redux": "^7.1.24",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3auth/base": "^1.0.0",
     "@web3auth/openlogin-adapter": "^1.0.0",
@@ -60,12 +63,13 @@
     "react-moralis": "^1.4.0",
     "react-multi-carousel": "^2.6.3",
     "react-query": "^3.16.0",
+    "react-redux": "^8.0.2",
     "react-toast-notifications": "^2.4.4",
     "recharts": "^2.1.12",
     "snakecase-keys": "^4.0.2",
     "swr": "^0.3.11",
     "tailwindcss": "^3.0.23",
-    "web3": "^1.7.0",
+    "web3": "^1.7.4",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
