--- a/packages/contracts/.eslintrc.yml
+++ b/packages/contracts/.eslintrc.yml
@@ -15,6 +15,7 @@ rules:
     - ignoreIIFE: true
       ignoreVoid: true
   "@typescript-eslint/no-inferrable-types": "off"
+  "@typescript-eslint/no-require-imports": "warn"
   "@typescript-eslint/no-unused-vars":
     - error
     - argsIgnorePattern: "_"
