--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -39,9 +39,6 @@
     "typechain": "^8.1.0",
     "typescript": "^4.7.4"
   },
-  "files": [
-    "/contracts"
-  ],
   "scripts": {
     "clean": "shx rm -rf ./artifacts ./cache ./coverage ./src/types ./coverage.json && yarn typechain",
     "commit": "git-cz",
@@ -55,5 +52,10 @@
     "prettier:check": "prettier --check --config ./.prettierrc.yml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "test": "hardhat test",
     "typechain": "hardhat typechain"
+  },
+  "dependencies": {
+    "@ethersproject/contracts": "^5.6.2",
+    "app-root-path": "^3.0.0",
+    "tsconfig-paths": "^4.0.0"
   }
 }
