--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,8 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "outDir": "lib",
     "target": "es5",
     "lib": [
       "dom",
