--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
   # all packages in direct subdirs of packages/
   - "packages/contracts"
+  - "packages/subgraph"
   # all packages in subdirs of components/
   - "src"
   # exclude packages that are inside test directories
