--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -6,10 +6,7 @@
     "build": "graph build",
     "prepare": "codegen && build",
     "generate": "graph-compiler --config config/polygon.json --include node_modules/@openzeppelin/subgraphs/src/datasources --export-schema . --export-subgraph",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ Rcontre360/factoring_subgraph",
-    "create-local": "graph create --node http://localhost:8020/ factoringsubgraph",
-    "remove-local": "graph remove --node http://localhost:8020/ factoringsubgraph",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 factoringsubgraph"
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ Rcontre360/factoring_subgraph"
   },
   "dependencies": {
     "@amxx/graphprotocol-utils": "^1.1.0",
