--- a/src/package.json
+++ b/src/package.json
@@ -45,6 +45,7 @@
     "clsx": "^1.2.1",
     "ethers": "^5.6.9",
     "humps": "^2.0.1",
+    "ipfs-http-client": "^57.0.3",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "moralis": "^1.4.0",
@@ -57,6 +58,7 @@
     "prop-types": "^15.7.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-file-viewer": "^1.2.1",
     "react-ga": "^3.3.0",
     "react-hook-form": "^7.11.0",
     "react-inlinesvg": "^2.2.2",
