--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -3,8 +3,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
-    "build": "graph build",
-    "prepare": "pnpm codegen && pnpm build",
+    "prepare": "graph build",
+    "build": "pnpm codegen && pnpm build",
     "generate": "graph-compiler --config config/polygon.json --include node_modules/@openzeppelin/subgraphs/src/datasources --export-schema . --export-subgraph",
     "deploy": "graph deploy --product hosted-service <GITHUB_USER>/<SUBGRAPH NAME>"
   },
